
Release 0.7.0: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2176. Move all logging to slf4j. (commons-logging jar no longer part of Tez tar)
  TEZ-1993. Implement a pluggable InputSizeEstimator for grouping fairly.
  TEZ-2424. Bump up max counter group name length limit to account for per_io counters.
    Default max limit increased. Should not affect existing users.

ALL CHANGES:
  TEZ-2412. Should kill vertex in DAGImpl#VertexRerunWhileCommitting
  TEZ-2410. VertexGroupCommitFinishedEvent & VertexCommitStartedEvent is not logged correctly
  TEZ-776. Reduce AM mem usage caused by storing TezEvents
  TEZ-2423. Tez UI: Remove Attempt Index column from task->attempts page
  TEZ-2416. Tez UI: Make tooltips display faster.
  TEZ-2404. Handle DataMovementEvent before its TaskAttemptCompletedEvent
  TEZ-2424. Bump up max counter group name length limit to account for per_io counters.
  TEZ-2417. Tez UI: Counters are blank in the Attempts page if all attempts failed
  TEZ-2366. Pig tez MiniTezCluster unit tests fail intermittently after TEZ-2333
  TEZ-2406. Tez UI: Display per-io counter columns in task and attempt pages under vertex
  TEZ-2384. Add warning message in the case of prewarn under non-session mode.
  TEZ-2415. PMC RDF needs to use asfext:pmc, not asfext:PMC.
  TEZ-2401. Tez UI: All-dag page has duration keep counting for KILLED dag.
  TEZ-2392. Have all readers throw an Exception on incorrect next() usage.
  TEZ-2408. TestTaskAttempt fails to compile against hadoop-2.4 and hadoop-2.2.
  TEZ-2405. PipelinedSorter can throw NPE with custom compartor.
  TEZ-1897. Create a concurrent version of AsyncDispatcher
  TEZ-2394. Issues when there is an error in VertexManager callbacks
  TEZ-2386. Tez UI: Inconsistent usage of icon colors
  TEZ-2395. Tez UI: Minimum/Maximum Duration show a empty bracket next to 0 secs when you purposefully failed a job.
  TEZ-2360. per-io counters flag should generate both overall and per-edge counters